<resources>
    <string name="app_name">Mój biały Kozaczek</string>
    <string name="action_settings">Settings</string>
    <string name="service_name">KozaczekService</string>
    <string name="option">Options</string>
    <string name="action_help">UrlConnection</string>
    <string name="action_check_updates">OkHttpConnection</string>
    <string name="refresh">Refresh</string>
    <string name="preferencesLabel">Preferences</string>
    <string name="downloadOption">Choosed download method</string>
    <string name="downloadDetails">Choose Download Method</string>
    <string name="downloadType">downloadType</string>
    <string name="downloadValue">1</string>
    <string name="selected_download_preference">"Selected : "</string>
    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="titleTextLayout">Title</string>
    <string name="descriptionTextLayout">description</string>
    <string name="pubDateTextLayout">Date</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_surname">Enter surname</string>
    <string name="enter_email">Enter email</string>
    <string name="Confirm">Confirm</string>
    <string name="details">Details</string>
    <string name="email">E-mail</string>
    <string name="newAccount">New account</string>
    <string name="wrong_email_format">Wrong email Format</string>
    <string name="wrong_name_format">Wrong name format</string>
    <string name="wrong_surname_format">Wrong surname format</string>
    <string name="empty_field_error">Field can not be empty</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="accountExists">There is only one %1$s account supported</string>
    <string name="enter_password">Enter password</string>
    <string name="invalidPassword">Invalid password</string>
    <string name="account_preferences_title">Account Preferences</string>
    <string name="account_preferences_summary">Account Details</string>
    <string name="account_login_title">Email</string>
    <string name="account_token_title">Token</string>
    <string name="account_login_key">ACCOUNT_LOGIN</string>
    <string name="account_token_key">ACCOUNT_TOKEN</string>
    <string name="provider_content_authority">example.kozaczekapp.DatabaseConnection.RssContentProvider</string>
    <string name="account_type">example.kozaczek</string>
    <string name="delete_account_button">Delete Account</string>
    <string name="delete_account_button_key">DELETE_ACCOUNT_BUTTON_KEY</string>
    <string name="timeZoneChoose">Response Type for TimeZone</string>
    <string name="selectedTimeZooneRequestType">Selected</string>
    <string name="timeZoneRequestTypeKey">timeZoneRequestTypeKey</string>
    <string name="notification_token_expired">Token is expired. Click to log in</string>
    <string name="checkBoxPreferences">checkboxPref</string>
    <string name="account_deleted_msg">Account is deleted.</string>
    <string name="loginBeforeUse">Tou have to log in before using this app</string>

</resources>
