<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardBackgroundColor="#FEFEFE"
    card_view:cardCornerRadius="@dimen/cardCornerRadiusValue"
    card_view:cardElevation="@dimen/cardEvlevationValue">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:paddingRight="5dp"
        android:id="@+id/articleImage"
        android:contentDescription="@null"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titleTextLayout"
        android:id="@+id/titleTextView"
        android:layout_alignTop="@+id/articleImage"
        android:layout_toRightOf="@+id/articleImage"
        android:layout_toEndOf="@+id/articleImage"
        android:textSize="@dimen/titleTextSize"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/descriptionTextLayout"
        android:id="@+id/descriptionTextView"
        android:layout_below="@+id/titleTextView"
        android:layout_alignLeft="@+id/titleTextView"
        android:layout_alignStart="@+id/titleTextView"
        android:textSize="@dimen/descriptionTextSize"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pubDateTextLayout"
        android:id="@+id/publicDateTextView"
        android:layout_gravity="center_vertical"
        android:layout_below="@+id/descriptionTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/pubDateTextSize"/>

</RelativeLayout>

</android.support.v7.widget.CardView>